[gd_scene load_steps=22 format=3 uid="uid://m1ol1vkikgvd"]

[ext_resource type="Texture2D" uid="uid://chpv6cgaj8but" path="res://Assets/GFX/LightsOutPlayer.png" id="1_04pph"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_8bc7g"]
[ext_resource type="Resource" path="res://DialogicComponents/BatteryOut.dtl" id="2_wjr51"]
[ext_resource type="Resource" path="res://DialogicComponents/MonsterCatches.dtl" id="3_aiajk"]
[ext_resource type="Texture2D" uid="uid://b31cikwtg16ol" path="res://Assets/GFX/DropShadow.png" id="3_fj8uf"]
[ext_resource type="Texture2D" uid="uid://y2cqnj1warxq" path="res://Assets/GFX/LightConeBlurred.png" id="3_tcaal"]
[ext_resource type="AudioStream" uid="uid://c7actp241pfyo" path="res://Assets/Audio/SFX/LightsOutFootstep.ogg" id="5_5e21n"]
[ext_resource type="AudioStream" uid="uid://bp53f2ine8l26" path="res://Assets/Audio/Music/ChaseSequenceMusicLightsOut.ogg" id="7_c0w42"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hkn8i"]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id="Animation_tybus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LightRotator:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FootstepPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sicpm"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("LightRotator:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-6, 3), Vector2(-5, 4)]
}

[sub_resource type="Animation" id="Animation_4h4ch"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("LightRotator:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(6, 3), Vector2(5, 4)]
}

[sub_resource type="Animation" id="Animation_jwrg7"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("LightRotator:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-6, 3), Vector2(-5, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FootstepPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_o4cay"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("LightRotator:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(6, 3), Vector2(5, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FootstepPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6kqke"]
_data = {
"RESET": SubResource("Animation_tybus"),
"idle_left": SubResource("Animation_sicpm"),
"idle_right": SubResource("Animation_4h4ch"),
"walk_left": SubResource("Animation_jwrg7"),
"walk_right": SubResource("Animation_o4cay")
}

[sub_resource type="Gradient" id="Gradient_sx288"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.623377)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f7606"]
gradient = SubResource("Gradient_sx288")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_10q6d"]
resource_name = "Flicker"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightRotator/PointLight2D:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="Animation" id="Animation_ro7j3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightRotator/PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}

[sub_resource type="Animation" id="Animation_wwaal"]
resource_name = "Steady"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightRotator/PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hlla5"]
_data = {
"Flicker": SubResource("Animation_10q6d"),
"RESET": SubResource("Animation_ro7j3"),
"Steady": SubResource("Animation_wwaal")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_8bc7g")
out_of_battery_timeline = ExtResource("2_wjr51")
hunted_timeline = ExtResource("3_aiajk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_hkn8i")

[node name="DropShadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.156863)
texture = ExtResource("3_fj8uf")
offset = Vector2(0, 8)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_04pph")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6kqke")
}
speed_scale = 0.5

[node name="LightRotator" type="Node2D" parent="."]
position = Vector2(-7, 3)

[node name="PointLight2D" type="PointLight2D" parent="LightRotator"]
position = Vector2(33, 2)
color = Color(0.937255, 0.776471, 0.607843, 1)
energy = 0.8
texture = ExtResource("3_tcaal")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 832
limit_bottom = 288
position_smoothing_enabled = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.937255, 0.776471, 0.607843, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_f7606")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.35
autostart = true

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5e21n")
max_polyphony = 2
bus = &"Footsteps"

[node name="LightFlickerController" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hlla5")
}

[node name="HuntedTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="ChaseSequencePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c0w42")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HuntedTimer" to="." method="_on_hunted_timer_timeout"]
